--- a/romance.css
+++ b/romance.css
@@ -1,9 +1,18 @@
-body {background: #f1f2f3}
+body {
+    background: #f1f2f3;
+    margin: auto;
+}
 
-header{ font-size: 27px;
+
+header{
+    width: auto;
+    font-size: 27px;
     font-weight: bold;
     text-align: center;
     padding: 30px;
+    margin: 0px 0px 20px 0px;
+    background-color:#a6a6a6;
+
 }
 .text_0 {
     font-weight: bold;
@@ -16,18 +25,20 @@ header{ font-size: 27px;
     font-size: 18px;
     width: 800px;
     margin: auto;
-    border: 1px solid #666666;
+    border: 1px solid #a6a6a6;
     padding: 5px 30px;
     border-radius: 30px 30px 0px 0px;
 }
 .main h3 {
     padding-top: 5px;
-    border-bottom:1px solid #cccccc ;
+    border-bottom:1px solid #a6a6a6 ;
 }
-.more{
+
+.more1{
     font-size: 12px;
-    width: 37px;
-    height:15px ;
+    width: auto;
+    height:auto ;
+    padding: 3px;
     border: 1px solid #a6a6a6;
     float: right;
 }
@@ -36,8 +47,8 @@ header{ font-size: 27px;
     display: flex;
     margin: auto;
     width: 860px;
-    height:1300px ;
-    border: 1px solid #666666;
+    height: auto ;
+    border: 1px solid #a6a6a6;
     padding-top: 34px;
     border-collapse: collapse;
 }
@@ -60,13 +71,31 @@ header{ font-size: 27px;
     padding-bottom: 10px;
 }
 
-.main_2 h4{
-    font-size: 18px;
-    text-align: center;
+.main_2 {
     width: 800px;
     height: 50px;
     margin: auto;
-    border: 1px solid #666666;
-    padding: 5px 30px;
+    border: 1px solid #a6a6a6;
+    padding: 15px 30px;
     border-radius: 0px 0px 30px 30px;
+}
+
+.main_2 h4{
+    font-size: 18px;
+    text-align: center;
+    margin: auto;
+    padding: 10px 30px;
+}
+
+.btn0{
+    font-size: 7px;
+    width: auto;
+    height:auto ;
+    border: 1px solid #a6a6a6;
+    float: right;
+    text-align: right}
+
+.box_text{
+    font-size: 10px;
+    background: #fff;
 }
